--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
-    "@babel/plugin-proposal-private-property-in-object",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +24,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dev":{
+    "@babel/plugin-proposal-private-property-in-object",
   },
   "eslintConfig": {
     "extends": [
